Implemented selecting text from document body.

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="button.css" />
   </head>
   <body>
-    <button id="changeColor"></button>
+    <p id="selectedTextContent"></p>
+    <button id="selectText"></button>
     <script src="popup.js"></script>
   </body>
 </html>
